# CPP-ConnectFour

./: .gitignore  CMakeLists.txt  README.md  main.cpp
headers/: board.h  consts.h  disc.h  game.h  helper.h
src/: board.cpp  game.cpp  helper.cpp
tests/: board_test.cpp  helper_test.cpp  sample_test.cpp
